service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: default
spec:
  ports:
  - nodePort: 32568
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-app
  type: NodePort
